chore: se corrigen detalles de ortografia

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <span class="payment-icon">💳</span>
             <span>MercadoPago</span>
           </div>
-          <p>Integrado con <strong>MercadoPago</strong>: aceptamos tarjetas de crédito, débito, transferencias y pagos en efectivo en puntos habilitados.</p>
+          <p>Integrado con <strong>MercadoPago</strong>: aceptamos tarjetas de crédito, débito y transferencias. Y pasa directo a la cuenta designada por el Municipio/Comuna</p>
         </div>
         <div class="payment-future">
           <span class="future-badge">Próximamente</span>
@@ -552,7 +552,7 @@
           <h4>Contacto</h4>
           <p>📞 0351-155575700</p>
           <p>✉️ info@alcaldia.com.ar</p>
-          <p>🌐 <www class="alcaldia com ar"></www>
+          <p>🌐 <www class="alcaldia.com.ar">https://alcaldia.com.ar</www>
           </p>
         </div>
       </div>
