chore: se corrige link de la pagina

--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <span class="contacto-icon">🌐</span>
             <div>
               <h4>Web</h4>
-              <a href="https://www.alcaldia.store" target="_blank">www.alcaldia.store</a>
+              <a href="https://www.alcaldia.com.ar" target="_blank">www.alcaldia.com.ar</a>
             </div>
           </div>
 
