chore: se reemplaza icono de navbar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header id="navbar">
     <nav class="nav-container">
       <a href="#hero" class="logo">
-        <img src="assets/alcaldiaLogo.webp" alt="ALCALD+IA Logo">
+        <img src="assets/alcaldiaLogo.svg" alt="ALCALD+IA Logo">
       </a>
       <button class="hamburger" id="hamburger" aria-label="Menú">
         <span></span>
