se corrige redaccion de la descripcion de mercado pago

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             <span class="payment-icon">💳</span>
             <span>MercadoPago</span>
           </div>
-          <p>Integrado con <strong>MercadoPago</strong>: aceptamos tarjetas de crédito, débito y transferencias. Y pasa directo a la cuenta designada por el Municipio/Comuna</p>
+          <p>Integrado con <strong>MercadoPago</strong>: aceptamos tarjetas de crédito, débito y transferencias. Y el dinero llega directamente a la cuenta designada por el Municipio o la Comuna.</p>
         </div>
         <div class="payment-future">
           <span class="future-badge">Próximamente</span>
